--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -39,11 +39,7 @@ pipelines:
           jobs:
             test_script:
               tasks:
-                - script: > 
-                  export LANG=C.UTF-8
-                  for proj in $(git diff HEAD^ HEAD --name-only *.csproj); 
-                  do echo $proj; 
-                  done
+                - script: export LANG=C.UTF-8 | for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do echo $proj; done
   publish-nuget:
     group: deploy-common-group
     label_template: "${commongit[:8]}"
