--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -31,7 +31,7 @@ pipelines:
                     command: dotnet
                     arguments:
                       - build
-                      - --configuretaion
+                      - --configurataion
                       - Release
                       - --verbosity
                       - quiet
