--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -14,6 +14,7 @@ pipelines:
         branch: master
         whitelist:
           - My.Common/**/*.*
+          - /*.yaml
     stages:
       - build:
           jobs:
@@ -31,7 +32,7 @@ pipelines:
                     command: dotnet
                     arguments:
                       - build
-                      - --configurataion
+                      - --configuration
                       - Release
                       - --verbosity
                       - quiet
@@ -78,6 +79,7 @@ pipelines:
         branch: master
         whitelist:
           - My.Common/**/*.*
+          - /*.yaml
       upstream:
         pipeline: build-common
         stage: unit_tests
