--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -37,12 +37,14 @@ pipelines:
                       - --verbosity
                       - quiet
                       - --no-restore
+                      - --verbosity
+                      - quiet
                 - exec:
                     working_directory: My.Common/
-                    command: bash 
+                    command: bash
                     arguments:
                       - -c
-                      - "echo *"
+                      - echo *
       - unit_tests:
           jobs:
             unit_tests:
