--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -42,7 +42,8 @@ pipelines:
                     command: bash
                     arguments:
                       - -c
-                      - echo *
+                      - echo
+                      - "*"
       - unit_tests:
           jobs:
             unit_tests:
