next try exec bash command

--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -41,9 +41,7 @@ pipelines:
                     working_directory: My.Common/
                     command: bash
                     arguments:
-                      - -c
-                      - echo
-                      - "*"
+                      - -c echo *
       - unit_tests:
           jobs:
             unit_tests:
