--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -41,7 +41,8 @@ pipelines:
                     working_directory: My.Common/
                     command: bash
                     arguments:
-                      - -c echo *
+                      - -c
+                      - echo *.nupkg
       - unit_tests:
           jobs:
             unit_tests:
