--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -37,6 +37,7 @@ pipelines:
                       - --verbosity
                       - quiet
                       - --no-restore
+                - script: bash -c 'echo *'
                 - exec:
                     working_directory: My.Common/
                     command: bash.exe
@@ -58,7 +59,7 @@ pipelines:
           jobs:
             test_script:
               tasks:
-                - script: for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do echo $proj; done
+                - script: 
   publish-nuget:
     group: deploy-common-group
     label_template: "${commongit[:8]}"
