--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -52,7 +52,7 @@ pipelines:
                     command: bash
                     arguments:
                       - -c
-                      - "for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output My.Common/packages --version-suffix Beta20201023; done"
+                      - "for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output 'My.Common/packages' --version-suffix Beta20201023; done"
                 - exec:
                     working_directory: My.Common/packages/
                     command: bash
