--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -53,15 +53,15 @@ pipelines:
                     command: bash
                     arguments:
                       - -c
-                      - "for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output 'My.Common/packages' --version-suffix Beta20201023; done"
+                      - "for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output './packages' --version-suffix Beta20201023; done"
                 - exec:
-                    working_directory: My.Common/packages/
+                    working_directory: packages/
                     command: bash
                     arguments:
                      - -c
-                     - "for pkg in $(echo *.nupkg); do dotnet nuget push $pkg --source 'My.Common/nugetpkgstorage'; done"
+                     - "for pkg in $(echo *.nupkg); do dotnet nuget push $pkg --source './nugetpkgstorage'; done"
                 - exec:
-                    working_directory: My.Common/packages/
+                    working_directory: packages/
                     command: bash
                     arguments: 
                       - echo *.nupkg
