--- a/common-ci.gocd.yaml
+++ b/common-ci.gocd.yaml
@@ -7,7 +7,7 @@ environments:
 pipelines:
   build-common:
     environment_variables:
-      DEPLOYMENT: testing
+      ENV_VAR: "{{SECRET:[MyHomeSecrets][secret_key]}}"
     group: build-common-group
     label_template: "${commongit[:8]}"
     materials:
@@ -55,17 +55,17 @@ pipelines:
                     command: bash
                     arguments:
                       - -c
-                      - "suff=`date '+%Y%m%d%H%M%S'`; for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output './packages' --version-suffix 'Beta$suff' && echo 'Beta$suff'; done "
+                      - "suff=`date '+%Y%m%d%H%M%S'`; for proj in $(git diff HEAD^ HEAD --name-only *.csproj); do dotnet pack $proj --configuration Release --no-build --output './packages' --version-suffix 'Beta$suff'; done; echo 'Beta$suff'"
                 - exec:
                     command: bash
                     arguments:
                       - -c
-                      - echo $DEPLOYMENT
+                      - echo $ENV_VAR
                 - exec:
                     command: bash
                     arguments:
                       - -c
-                      - "[ -d \"/packages\" ] && cd 'packages'; for pkg in $(echo *.nupkg); do dotnet nuget push $pkg --source 'Package source 1'; done"
+                      - '[ -d "/packages" ] && cd ''packages''; for pkg in $(echo *.nupkg); do dotnet nuget push $pkg --source ''Package source 1''; done'
   publish-nuget:
     group: deploy-common-group
     label_template: "${commongit[:8]}"
